# ChatApp

./: .env.example  .gitignore  .railwayignore  APPWRITE_SETUP.md  DEBUG_NOTIFICATIONS.md  Dockerfile  INSTALL_PWA.md  KOYEB_DEPLOYMENT.md  NOTIFICATION_DEBUG_CHECKLIST.md  NOTIFICATION_GUIDE.md  QUICK_TEST_NOTIFICATION.md  README.md  RENDER_DEPLOYMENT.md  VERCEL_ENV_SETUP.md  docker-compose.yml
.github/: copilot-instructions.md
apps/backend/: .env.example  Cargo.toml  Dockerfile  railway.toml  render.yaml
apps/backend/migrations/: 0001_create_users.sql  0002_create_documents.sql  0003_create_document_snapshots.sql  0004_indexes.sql  0005_create_messages.sql  0006_add_image_url.sql  0007_create_message_reads.sql  0008_add_reply_to.sql  0009_add_deleted_at.sql  0011_create_search_index.sql  0012_create_room_users.sql  0013_add_edited_at.sql  0014_create_message_reactions.sql  0016_create_email_verifications.sql  0017_fix_email_verifications_timestamps.sql  0018_create_friends.sql  0019_create_invite_codes.sql
apps/backend/src/: auth.rs  avatar.rs  config.rs  db.rs  email.rs  errors.rs  friends.rs  main.rs  models.rs  ratelimit.rs  validation.rs  ws.rs  ws.rs.backup
apps/frontend/: .env.example  PWA_SETUP.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/frontend/public/: manifest.json  sw.js
apps/frontend/scripts/: generate-icons.cjs
apps/frontend/src/: App.tsx  index.tsx  styles.css
apps/frontend/src/collab/: YjsWsProvider.ts
apps/frontend/src/components/: CallInterface.tsx  EmojiPicker.tsx  Icons.tsx
(+20 files in other folders)
