[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-web-actors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = { version = "0.5", default-features = false, features = ["std"] }
rand = "0.8"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "migrate"] }
futures = "0.3"
bytes = "1"
base64 = "0.21"
parking_lot = "0.12"
dashmap = "5"
yrs = "0.18"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
urlencoding = "2"
actix = "0.13"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }

# Force older version of base64ct to avoid edition2024 requirement
base64ct = "=1.6.0"
# Pin transitive dependency `home` to avoid edition2024-only 0.5.12
home = "=0.5.11"
